add link to DBFlute Intro boot

--- a/web/ja/manual/function/generator/intro/alterbyintro.html
+++ b/web/ja/manual/function/generator/intro/alterbyintro.html
@@ -40,6 +40,7 @@
 		manage.sh|bat の 88 (intro) を実行して、Introを起動しましょう。<br>
 		サイドメニューにある、<em class="mark">AlterCheck</em>リンクからAlterCheck画面に移動することができます。
 	</p>
+	<div class="relatedpage"><a href="./index.html#bootintro">DBFlute Intro を起動</a></div>
 	<p class="imgbox">AlterCheck画面
 		<a href="../../../../../data/snapshot/intro/alter/alter-top.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-top.png" alt="DBFluteIntro Top" width="550" /></a>
 	</p>
