improve overview of AlterCheck by Intro again

--- a/web/ja/manual/function/generator/intro/alterbyintro.html
+++ b/web/ja/manual/function/generator/intro/alterbyintro.html
@@ -53,20 +53,23 @@
 	<p>
 		DBFlute Intro の画面を使えば、そういった物理構造をあまり意識する必要がありません。UIによるレールを敷いて、ケアレスミスが極力減るようにデザインされています。
 	</p>
-	<h3 id="where">AlterCheckの画面はどこにある？</h3>
+
+	<h2 id="where">AlterCheckの画面はどこにある？</h2>
+	<h3 id="bootintro">DBFlute Intro を起動</h3>
 	<p>
 		manage.sh|bat の 88 (intro) を実行して、Introを起動しましょう。<span class="frm">(常に最新版が起動します)</span>
 	</p>
 	<div class="relatedpage"><a href="./index.html#bootintro">DBFlute Intro を起動</a></div>
+	<h3 id="alterlink">サイドメニューのAlterCheck</h3>
 	<p>
-		サイドメニューにある、<em class="mark">AlterCheck</em>リンクからAlterCheck画面に移動することができます。
+		DB変更に対応するDBFluteクライアントを選び、サイドメニューにある、<em class="mark">AlterCheck</em>リンクからAlterCheck画面に移動することができます。
 	</p>
 	<p class="imgbox">AlterCheck画面
 		<a href="../../../../../data/snapshot/intro/alter/alter-top.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-top.png" alt="DBFluteIntro Top" width="550" /></a>
 	</p>
-	<h3 id="flow">操作の流れ、2つのステップ</h3>
+	<h3 id="operationflow">操作の流れ、2つのステップ</h3>
 	<p>
-		AlterCheckは大きく分けて2つのステップに分かれています。
+		そして、AlterCheckのステップを踏んでいきます。(大きく分けて2つのステップ)
 	</p>
 	<ul>
 		<li><a href="#step1"><em class="mark">Step1. AlterCheckの下準備をする</em></a></li>
