improve requirement of hands-on section4

--- a/web/ja/tutorial/handson/section04.html
+++ b/web/ja/tutorial/handson/section04.html
@@ -253,7 +253,7 @@
 				<li>会員ステータスの表示順で並べる</li>
 				<li>会員が正式会員と退会会員であることをアサート</li>
 				<li>両方とも存在していることをアサート</li>
-				<li>Entity上だけで正式会員を退会会員に変更する</li>
+				<li>(検索されたデータに対して)Entity上だけで正式会員を退会会員に変更する</li>
 				<li>変更した後、Entityが退会会員に変更されていることをアサート</li>
 				<li>変更した後、データベース上は退会会員に変更されて "いない" ことをアサート ※1</li>
 			</ul>
