add supplement about Aurora for PostgreSQL

--- a/web/ja/environment/supported.html
+++ b/web/ja/environment/supported.html
@@ -71,7 +71,7 @@
 		<h3 id="mysqlforkdb">Aurora や Percona は？</h3>
 		<p>
 			MySQLのフォークである <em class="mark">Amazon Aurora</em> や <em class="mark">Percona</em> は、正式サポートの中に明記されていませんが、それらDBMSがMySQLとの互換性を保っている限り動作するでしょう。
-			<span class="frm">(MySQLのJDBCドライバーで、MySQLと変わらずアクセスできる限り)</span>
+			<span class="frm">(MySQLのJDBCドライバーで、MySQLと変わらずアクセスできる限り。PostgreSQL互換の Amazon Aurora も同様に)</span>
 		</p>
 		<p>
 			もし将来、それらDBMSでMySQLと違う挙動が発生して困ることがあれば、フィードバックを頂ければ可能な範囲でDBFlute側で対応したいとは思います。
