prepare changelog for 2020/01/01

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -28,6 +28,23 @@
 	${indexlist}
 
       <div class="release">
+        <h2>DBFlute-1.2.2 <span class="frm">※Java8</span></h2>
+        <p class="releas5date">2020/01/01</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>DBFlute Runtime: make SqlCaluse@registerDynamicHintFromBaseTable() for TiDB</li>
+            <li>DBFlute Engine: LoadDataReverse, change TSV sheet number 1,2 to 01,02</li>
+            <li>DBFlute Engine: LoadDataReverse, xlsLimit=0 means all TSV</li>
+            <li>DBFlute Engine: LastaDoc, add type (html, api, stream) in action list</li>
+            <li>DBFlute Engine: _project.sh, keeps existing JAVA_HOME in the environment</li>
+          </ul>
+          <h3>BUG</h3>
+          <ul>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>DBFlute-1.2.1 <span class="frm">※Java8</span></h2>
         <p class="releas5date">2019/10/20</p>
         <div class="new">
