--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,23 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.1.6</h2>
+        <p class="releas5date">2019/12/25</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>make AsyncManager@bridgeState() for other-managed thread</li>
+            <li>improve AsyncManager@parallel() thread handling</li>
+            <li>add hookFinally() to ConcurrentAsyncCall of AsyncManager</li>
+            <li>make limitConcurrencyCount() of ConcurrentParallelOption for parallel()</li>
+            <li>upgrade Lasta Di to 0.8.2</li>
+            <li>upgrade Hibernate Validator to 6.0.18.Final</li>
+            <li>[Lasta Di] bridge detached cause of commit & rollback process</li>
+          </ul>
+        </div>
+        <p>※1.1.5はスキップバージョン</p>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.1.4</h2>
         <p class="releas5date">2019/10/21</p>
         <div class="new">
