--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -34,6 +34,7 @@
           <h3>NEW</h3>
           <ul>
             <li>DBFlute Runtime: make SqlCaluse@registerDynamicHintFromBaseTable() for TiDB</li>
+            <li>DBFlute Engine: extendedAbstractBehaviorWritableClass(or Readable) as littleAdjustment</li>
             <li>DBFlute Engine: LoadDataReverse, change TSV sheet number 1,2 to 01,02</li>
             <li>DBFlute Engine: LoadDataReverse, xlsLimit=0 means all TSV</li>
             <li>DBFlute Engine: LastaDoc, add type (html, api, stream) in action list</li>
