--- a/web/ja/manual/function/generator/intro/index.html
+++ b/web/ja/manual/function/generator/intro/index.html
@@ -59,8 +59,9 @@
 		以下のようにリリースされています。
 	</p>
 	<dl class="shortkeymainlist">
+		<dt>2020/01/12</dt><dd><em class="mark">0.3.9</em> :: AlterCheckのStep1で、チケット番号入力を必須に</dd>
 		<dt>2020/01/01</dt><dd><em class="mark">0.3.8</em> :: SchemaPolicyCheckのStatement登録/削除を追加</dd>
-		<dt>2019/10/24</dt><dd><em class="mark">0.3.7</em> :: targetLanguage と targetContainer のデフォルト値対応など、細かい改善</dd>
+		<dt>2019/10/24</dt><dd><em class="mark">0.3.7</em> :: targetLanguage と targetContainer のデフォルト値対応等、細かい改善</dd>
 		<dt>2019/10/20</dt><dd><em class="mark">0.3.6</em> :: AlterCheck画面リニューアル、GUIで完結するように</dd>
 		<dt>2019/07/07</dt><dd><em class="mark">0.3.5</em> :: AlterCheck、SchemaPolicyCheckの細かい改善</dd>
 		<dt>2019/05/01</dt><dd><em class="mark">0.3.4</em> :: SchemaPolicyCheckの画面追加、ナビゲーションバーを追加</dd>
