remove instructor talk

--- a/web/ja/tutorial/handson/section04.html
+++ b/web/ja/tutorial/handson/section04.html
@@ -300,7 +300,7 @@
 	</p>
 	<p>
 		そうしたら、そのテストメソッドはコメントアウトして、どういう確認を行ってどういう経緯でコメントアウトしたのかを説明するコメントを書いておいてください。
-		コメントアウトの理由を書くこと自体が大事なことです<span class="frm">(講師による小話あり)</span>。
+		コメントアウトの理由を書くこと自体が大事なことです。
 		ちなみに、コメントアウトは該当行を選択して "ctrl + /"。
 	</p>
 	<div class="relatedpage"><a href="../../manual/topic/programming/shortcut/codejustcut.html#comment">コード調整ショートカット - コメント周り</a></div>
@@ -309,7 +309,7 @@
 	<h3 id="java6cls">Java6,7 (DBFlute-1.0.x) では</h3>
 	<p>
 		区分値メソッドを生成しても、ネイティヴ型の設定メソッドはデフォルトの設定では残っています。
-		その理由はドキュメントに書いてある通りです。さっと目を通してみましょう。<span class="frm">(講師によるお話あり)</span>
+		その理由はドキュメントに書いてある通りです。さっと目を通してみましょう。
 	</p>
 	<div class="relatedpage"><a href="../../manual/function/ormapper/entity/index.html#classification">Entity - 区分値</a></div>
 	<div class="relatedpage"><a href="../../manual/function/ormapper/conditionbean/howto.html#classification">ConditionBeanの使い方 - 区分値</a></div>
@@ -345,7 +345,7 @@
 	<p>
 		暗黙の区分値は、データ登録時には何の制約もありません。
 		アプリ実装ではDBFluteの区分値メソッドを使ってタイプセーフにできますが、ReplaceSchemaのエクセルデータ作成ではケアレスミスが簡単に起きてしまいます。
-		DBFluteのオプションで登録時に自動チェックすることができます。<span class="frm">(講師によるお話あり)</span>
+		DBFluteのオプションで登録時に自動チェックすることができます。
 	</p>
 	<div class="detailpage"><a href="../../manual/function/genbafit/implfit/classification/index.html#checkimplicitset">現場フィット - 区分値 - 暗黙の区分値チェック</a></div>
 	<p>
