--- a/web/ja/tutorial/handson/section05.html
+++ b/web/ja/tutorial/handson/section05.html
@@ -63,7 +63,7 @@
 		</dd>
 	</dl>
 	<p>
-		会員住所情報は、会員から見て "業務的one-to-one" と言えます。<span class="frm">(講師によるお話あり)</span>
+		会員住所情報は、会員から見て "業務的one-to-one" と言えます。
 	</p>
 	<div class="detailpage"><a href="../../manual/function/genbafit/implfit/bizonetoone/index.html">現場フィット - 業務的one-to-one</a></div>
 
@@ -113,9 +113,6 @@
 			</ul>
 		</dd>
 	</dl>
-	<p>
-		<span class="frm">(講師による現在日時取得についての小話あり)</span>
-	</p>
 
 	<h2 id="impl">導出的one-to-oneを利用した実装</h2>
 	<p>
@@ -156,7 +153,6 @@ select max(login.LOGIN_DATETIME)
 	<p>
 		このような業務的な制約はどうしても存在してしまいます。
 		プログラム上では、不整合なデータが発生しないように気をつけて実装テストされますが、テストデータ自体の作成でのチェックは意外に忘れられがちです。
-		<span class="frm">(講師によりお話あり)</span>
 	</p>
 	<div class="relatedpage"><a href="../../manual/function/generator/task/replaceschema/takefinally.html">ReplaceSchema - 最終チェック</a></div>
 	<p>
