--- a/web/ja/tutorial/handson/section06.html
+++ b/web/ja/tutorial/handson/section06.html
@@ -135,7 +135,7 @@
 	</ol>
 	<div class="relatedpage"><a href="../../manual/topic/programming/shortcut/uttestcut.html">単体テストショートカット</a></div>
 	<p>
-		ロジッククラスでの Behavior の宣言は、以下のようにします。<span class="frm">(講師によるDIのお話あり)</span>
+		ロジッククラスでの Behavior の宣言は、以下のようにします。
 	</p>
 <pre><span class="codetitle">e.g. ロジッククラスでの Behavior の宣言 @Java</span><code>
 <span class="comment">/**
