--- a/web/ja/tutorial/handson/section08.html
+++ b/web/ja/tutorial/handson/section08.html
@@ -152,7 +152,7 @@
 
 	<h2 id="ifyoulikedeadlock">もしよければ、デッドロックを</h2>
 	<p>
-		せっかくなので、ちょっとデッドロックしてみましょう。<span class="frm">(講師によるデッドロック話あり)</span>
+		せっかくなので、ちょっとデッドロックしてみましょう。
 	</p>
 	<dl class="textlist">
 		<dt>※ロジックは作らずにテストクラスに直接実装</dt>
