--- a/web/ja/tutorial/handson/section09.html
+++ b/web/ja/tutorial/handson/section09.html
@@ -61,7 +61,7 @@
 
 	<h2 id="firstoutside">初めての外だしSQL</h2>
 	<p>
-		まずは、外だしSQLの使い方です。<span class="frm">(講師によるフォローあり)</span>
+		まずは、外だしSQLの使い方です。
 	</p>
 	<div class="detailpage"><a href="../../manual/function/ormapper/outsidesql/howto.html">外だしSQLの使い方</a></div>
 	<p>
@@ -267,7 +267,7 @@
 	<h2 id="cursor">外だしSQLでカーソル検索ってみる</h2>
 	<p>
 		そして、"さらに外だし" で作成した外だしSQLと同じ仕様(ページングは不要)で、新たにカーソル検索のエクササイズをやってみましょう。
-		ConditionBeanでのカーソル検索を思い出して、比較しながら実装してみましょう。<span class="frm">(講師によるお話あり)</span>
+		ConditionBeanでのカーソル検索を思い出して、比較しながら実装してみましょう。
 	</p>
 	<div class="detailpage"><a href="../../manual/topic/programming/dbaccess/cursorselect.html">そもそもカーソル検索とは？</a></div>
 	<p>
@@ -364,7 +364,6 @@
 	<p>
 		Logicクラスの selectLetsCursor() にて、そのまま処理を追加し、
 		テストコードのアサートにて、同じく FileToken を使ってそのファイルを読み込んでログに出力してみましょう。
-		<span class="frm">(講師によるコードリーディングの小話あり)</span>
 	</p>
 	<p>
 		だいぶコード量が増えネストも深くなってきます。適度にprivateメソッドなどに切り出して、Logicのpublicメソッドのコードの見通しを良くしましょう。
@@ -408,7 +407,7 @@
 
 	<h2 id="procedure">ストアドプロシージャも外だしSQL</h2>
 	<p>
-		ちょっとだけストアドプロシージャも作って呼んでみましょう。<span class="frm">(講師によるお話あり)</span>
+		ちょっとだけストアドプロシージャも作って呼んでみましょう。
 	</p>
 	<h3 id="inoutproc">IN, OUTパラメータのプロシージャ</h3>
 	<p>
