small fix: change is to are

--- a/web/lastaflute/lastadi/index.html
+++ b/web/lastaflute/lastadi/index.html
@@ -63,7 +63,7 @@
 		<dt>Class Name</dt><dd>e.g. app.web.AbcAction, auto regsitered as Action to Lasta Di</dd>
 	</dl>
 	<p>
-		Class name suffixes is e.g. following: 
+		Class name suffixes are e.g. following: 
 	</p>
 	<dl class="shoshortkeymainlist">
 		<dt>Action</dt><dd>...app.web.AbcAction</dd>
