--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,22 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.1.7</h2>
+        <p class="releas5date">2020/05/26</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>more rich request info of client error (RequestLoggingFilter)</li>
+            <li>support definitelySync() with upgrading MailFlute to 0.6.3</li>
+            <li>upgrade MailFlute to 0.6.3</li>
+            <li>upgrade Hibernate Validator to 6.0.20.Final</li>
+            <li>[MailFlute] support definitelySync()</li>
+            <li>[MailFlute] DeliveryCategory overrides hashCode() for map key</li>
+          </ul>
+        </div>
+        <p>※1.1.5はスキップバージョン</p>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.1.6</h2>
         <p class="releas5date">2019/12/25</p>
         <div class="new">
