--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -28,6 +28,23 @@
 	${indexlist}
 
       <div class="release">
+        <h2>DBFlute-1.2.3 <span class="frm">※Java8</span></h2>
+        <p class="releas5date">2020/05/29</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>DBFlute Runtime: support DfMapStyle@withoutDisplaySideSpace() for performance</li>
+            <li>DBFlute Runtime: add CQ loading to Behavior warmUpCommand()</li>
+            <li>DBFlute Engine: SchemaPolicy, $$first_columnName$$ for uniqueName</li>
+            <li>DBFlute Engine: can split freeGenMap.dfprop by $$split$$</li>
+            <li>DBFlute Engine: upgrade H2 database to 1.4.200</li>
+          </ul>
+          <h3>BUG</h3>
+          <ul>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>DBFlute-1.2.2 <span class="frm">※Java8</span></h2>
         <p class="releas5date">2020/01/01</p>
         <div class="new">
