add link to blog about javatry

--- a/web/ja/tutorial/javatry/index.html
+++ b/web/ja/tutorial/javatry/index.html
@@ -32,6 +32,10 @@
 	<p>
 		Javaの "わりと初心者" の方からできるエクササイズです。<span class="frm">(DBFluteは登場しませんが、プログラミングの基礎スキルがあってこそフレームワークが使いこなせるものです)</span>
 	</p>
+	<p>
+		ブログでも詳しく紹介しています。
+	</p>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20200301/javatry">外部サイト - jfluteがJava入門エクササイズ「javatry」を作りました。 | jfluteの日記</a></div>
 	<h3 id="target">こんな方にオススメ</h3>
 	<ul>
 		<li>Javaの本は少し読んでみた程度のプログラミング初心者</li>
