--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,21 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.1.8</h2>
+        <p class="releas5date">2020/10/08</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>JsonMappingOption@asNullToEmptyWriting() typeable</li>
+            <li>upgrade Lasta Di to 0.8.3</li>
+            <li>upgrade MailFlute to 0.6.4</li>
+            <li>[Lasta Di] Repository component as default</li>
+            <li>[MailFlute] explicitly close transport after sending</li>
+          </ul>
+        </div>
+        <p>※1.1.5はスキップバージョン</p>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.1.7</h2>
         <p class="releas5date">2020/05/26</p>
         <div class="new">
