add "fix map-style for map:{}" to changelog

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -38,6 +38,7 @@
             <li>DBFlute Engine: SchemaPolicy, $$first_columnName$$ for uniqueName</li>
             <li>DBFlute Engine: can split freeGenMap.dfprop by $$split$$</li>
             <li>DBFlute Engine: upgrade H2 database to 1.4.200</li>
+            <li>DBFlute Engine: fix map-style for map:{} only pattern <span class="frm">*10/20パッチ</span></li>
           </ul>
           <h3>BUG</h3>
           <ul>
