add patch "Fix outside-sql files detecting order"

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,12 +33,13 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: Fix outside-sql files detecting order <span class="frm">*10/31パッチ</span></li>
+            <li>DBFlute Engine: fix map-style for map:{} only pattern <span class="frm">*10/20パッチ</span></li>
             <li>DBFlute Runtime: support DfMapStyle@withoutDisplaySideSpace() for performance</li>
             <li>DBFlute Runtime: add CQ loading to Behavior warmUpCommand()</li>
             <li>DBFlute Engine: SchemaPolicy, $$first_columnName$$ for uniqueName</li>
             <li>DBFlute Engine: can split freeGenMap.dfprop by $$split$$</li>
             <li>DBFlute Engine: upgrade H2 database to 1.4.200</li>
-            <li>DBFlute Engine: fix map-style for map:{} only pattern <span class="frm">*10/20パッチ</span></li>
           </ul>
           <h3>BUG</h3>
           <ul>
